--- a/BlogApplication/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/BlogApplication/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,5 +1,7 @@
 ﻿@model BlogApplication.Models.ExternalLoginConfirmationViewModel
 @{
+    /**/
+
     ViewBag.Title = "Register";
 }
 <h2>@ViewBag.Title.</h2>
@@ -14,7 +16,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p class="text-info">
         You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-        Please enter a user name for this site below and click the Register button to finish
+        Please confirm the following data for this site below and click the Register button to finish
         logging in.
     </p>
     <div class="form-group">
@@ -22,6 +24,27 @@
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.DisplayName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.DisplayName, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.DisplayName, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
