--- a/BlogApplication/Views/Comments/Index.cshtml
+++ b/BlogApplication/Views/Comments/Index.cshtml
@@ -53,9 +53,19 @@
             @Html.DisplayFor(modelItem => item.UpdateReason)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            <p>
+                @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                }
+                |
+                @Html.ActionLink("View Post", "Details", new { id = item.Id }) |
+
+                @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                }
+            </p>
         </td>
     </tr>
 }
