--- a/BlogApplication/Views/Home/Contact.cshtml
+++ b/BlogApplication/Views/Home/Contact.cshtml
@@ -1,17 +1,44 @@
-﻿@{
-    ViewBag.Title = "Contact";
+﻿
+@model BlogApplication.Models.EmailModel
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <h4>Send me a message.</h4>
+    <hr />
+    <div class="contact-info">
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.FromName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10 name">
+                @Html.TextBoxFor(m => m.FromName, new { @class = "form-control", placeholder= "Enter your name..." })
+                @Html.ValidationMessageFor(m => m.FromName)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.FromEmail, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10 email">
+                @Html.TextBoxFor(m => m.FromEmail, new { @class = "form-control", placeholder = "Enter your email..." })
+                @Html.ValidationMessageFor(m => m.FromEmail)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Subject, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10 subject">
+                @Html.TextBoxFor(m => m.Subject, new { @class = "form-control", placeholder = "Enter a subject..." })
+                @Html.ValidationMessageFor(m => m.Subject)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Body, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10 body">
+                @Html.TextBoxFor(m => m.Body, new { @class = "form-control", placeholder = "Enter your message..." })
+                @Html.ValidationMessageFor(m => m.Body)
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+            <input type="submit" class="btn-primary-contact" value="Send" />
+    </div>
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<script src="~/js/jqBootstrapValidation.min.js"></script>
